--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -13,7 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_margin="8dp"
-            android:layout_weight="1"
+            android:layout_weight="1.25"
             android:padding="8dp" />
 
         <LinearLayout
@@ -28,6 +28,8 @@
                 android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:textSize="25sp"
+                android:textStyle="bold"
                 android:layout_weight="1.25"/>
             <TextView
                 android:id="@+id/desc_item"
