--- a/app/src/main/res/layout/splash_scree.xml
+++ b/app/src/main/res/layout/splash_scree.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@drawable/home1"
     tools:context=".ScreenSplash">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="25dp"
-        android:layout_weight="5"
-        android:src="@drawable/rwanduz06" />
+
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="100dp"
         android:layout_marginHorizontal="60dp"
         android:layout_marginBottom="70dp"
         android:layout_weight="1"
@@ -32,4 +27,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
